[package]
name = "blades-heading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blades = { git = "https://github.com/grego/blades", default_features = false }
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1.5"
